--- a/padavanonly.config
+++ b/padavanonly.config
@@ -63,6 +63,8 @@ CONFIG_MTK_BAND_STEERING=y
 CONFIG_MTK_MAP_SUPPORT=y
 CONFIG_MTK_MAP_R2_VER_SUPPORT=y
 CONFIG_MTK_MAP_R3_VER_SUPPORT=y
+CONFIG_MTK_MAP_R2_6E_SUPPORT=y
+CONFIG_MTK_MAP_R3_6E_SUPPORT=y
 CONFIG_MTK_MBO_SUPPORT=y
 CONFIG_MTK_MBSS_DTIM_SUPPORT=y
 CONFIG_MTK_MBSS_SUPPORT=y
