--- a/.github/workflows/JDCloud-AX6000-Baili-padavanonly.yml
+++ b/.github/workflows/JDCloud-AX6000-Baili-padavanonly.yml
@@ -27,7 +27,7 @@ env:
   REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10
   REPO_BRANCH: 2410
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: padavanonly.config
+  CONFIG_FILE: padavanonly5.config
   DIY_P1_SH: padavanonlypart1.sh
   DIY_P2_SH: padavanonlypart2.sh
   SSH_ACTIONS: true
