--- a/.github/workflows/JDCloud-AX6000-Baili-padavanonly-5.4.yml
+++ b/.github/workflows/JDCloud-AX6000-Baili-padavanonly-5.4.yml
@@ -74,6 +74,37 @@ jobs:
         large-packages: true
         docker-images: true
         swap-storage: true
+
+    - name: Removing stuff
+      run: |
+        sudo rm -rf /usr/share/dotnet
+        sudo rm -rf /usr/share/swift
+        sudo rm -rf /usr/local/lib/android
+        sudo rm -rf /opt/ghc
+        sudo rm -rf /usr/local/.ghcup
+        sudo rm -rf "/usr/local/share/boost"
+        sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+        sudo rm -rf /opt/hostedtoolcache/
+        sudo rm -rf /usr/local/graalvm/
+        sudo rm -rf /usr/local/share/powershell
+        sudo rm -rf /usr/local/share/chromium
+        sudo rm -rf /usr/local/lib/node_modules
+        sudo docker image prune --all --force
+        
+        APT_PARAMS='sudo apt -y -qq -o=Dpkg::Use-Pty=0'
+        $APT_PARAMS remove -y '^dotnet-.*'
+        $APT_PARAMS remove -y '^llvm-.*'
+        $APT_PARAMS remove -y '^php.*'
+        $APT_PARAMS remove -y '^mongodb-.*'
+        $APT_PARAMS remove -y '^mysql-.*'
+        $APT_PARAMS remove -y azure-cli google-* google-chrome-stable firefox powershell mono-devel libgl1-mesa-dri
+        $APT_PARAMS autoremove --purge -y
+        $APT_PARAMS autoclean
+        $APT_PARAMS clean
+
+    - name: After
+      run: |
+        df -H
         
     - name: 下载固件源码
       working-directory: /workdir
