--- a/.github/workflows/JDCloud-AX6000-Baili-padavanonly-6.6.yml
+++ b/.github/workflows/JDCloud-AX6000-Baili-padavanonly-6.6.yml
@@ -95,7 +95,7 @@ jobs:
         sudo -E apt -yqq autoremove --purge
         sudo -E apt -yqq autoclean
         sudo -E apt -yqq clean
-        sudo -E apt -yqq install dos2unix python3-netifaces libfuse-dev
+        sudo -E apt -yqq install dos2unix python3-netifaces libfuse-dev llvm-dev libclang-dev clang
         sudo bash -c 'bash <(curl -sL https://build-scripts.immortalwrt.org/init_build_environment.sh)'
         sudo rm -rf /etc/apt/sources.list.d/* /usr/local/lib/android /opt/ghc /usr/share/dotnet /usr/local/graalvm /usr/local/.ghcup \
         /usr/local/share/powershell /usr/local/share/chromium /usr/local/lib/node_modules
