--- a/.github/workflows/JDCloud-AX6000-Baili-padavanonly-6.6.yml
+++ b/.github/workflows/JDCloud-AX6000-Baili-padavanonly-6.6.yml
@@ -107,7 +107,7 @@ jobs:
         sudo -E apt -yqq autoremove --purge
         sudo -E apt -yqq autoclean
         sudo -E apt -yqq clean
-        sudo -E apt -yqq install dos2unix python3-netifaces libfuse-dev llvm-dev libclang-dev clang
+        sudo -E apt -yqq install rename dos2unix python3-netifaces libfuse-dev llvm-dev libclang-dev clang
         sudo bash -c 'bash <(curl -sL https://build-scripts.immortalwrt.org/init_build_environment.sh)'
         sudo rm -rf /etc/apt/sources.list.d/* /usr/local/lib/android /opt/ghc /usr/share/dotnet /usr/local/graalvm /usr/local/.ghcup \
         /usr/local/share/powershell /usr/local/share/chromium /usr/local/lib/node_modules
@@ -197,11 +197,11 @@ jobs:
       run: | 
         cd openwrt/bin/targets/*/*
         rm -rf packages
-        find ./ -iregex ".*\(bl31-uboot.fip\|gpt.bin\|preloader.bin\|bl2.bin\)$" -exec rm -rf {} +
-        sudo -E apt-get -qq install rename
+        sudo -E apt -yqq install rename
         rename 's/.*${{ env.DEVICE_NAME }}/${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}-${{ env.DEVICE_NAME }}${{ env.BUILD_DOCKERMAN }}/' *
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
+
 
     - name: 打包上传固件到Actions Artifacts
       uses: actions/upload-artifact@main
